--- a/InClassAssignments.ipynb
+++ b/InClassAssignments.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOgrsIp/ntpMunNOiPRuF8x",
+      "authorship_tag": "ABX9TyNNv+DhyKD6VoHQ6abes7Mn",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -91,7 +91,7 @@
         "id": "SbkMKTESSFQx",
         "outputId": "772adf0c-ea3d-4bc4-cc33-38722503a7d5"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -142,7 +142,7 @@
         "id": "b8OFUzdI9K5x",
         "outputId": "d35deb9a-bdbd-482d-8ba3-f85230102fb3"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -152,6 +152,350 @@
             "2nd Number6\n",
             "+ - * /*\n",
             "30.0\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Parking Garage"
+      ],
+      "metadata": {
+        "id": "1u2cB2liIJIX"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "flat = 5\n",
+        "for t in range(1, 9):\n",
+        "  charge = flat + 2.5 * t\n",
+        "  if charge < 10:\n",
+        "    charge = 10\n",
+        "  elif charge > 20:\n",
+        "    charge = 20\n",
+        "  print(t, charge)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "zGXhonxJIIzE",
+        "outputId": "14dc4893-f604-41bb-f0b0-2557ed4c1065"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1 10\n",
+            "2 10.0\n",
+            "3 12.5\n",
+            "4 15.0\n",
+            "5 17.5\n",
+            "6 20.0\n",
+            "7 20\n",
+            "8 20\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Movie Theater"
+      ],
+      "metadata": {
+        "id": "WnrSyDCCK03s"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "flat = 200\n",
+        "ticket = 10\n",
+        "standardAttendees = 20\n",
+        "for ad in range(0, 200, 25):\n",
+        "  attendance = 2 * round(ad ** .5) + standardAttendees\n",
+        "  profit = ticket * attendance - flat - ad\n",
+        "  print(ad, profit)\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "bM6R8OvZK0pZ",
+        "outputId": "b2860aa3-1fd9-4b49-d03b-f5691df63a8f"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0 0\n",
+            "25 75\n",
+            "50 90\n",
+            "75 105\n",
+            "100 100\n",
+            "125 95\n",
+            "150 90\n",
+            "175 85\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "0 List"
+      ],
+      "metadata": {
+        "id": "lB0iVc9CVq5E"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "L = []\n",
+        "I = 1\n",
+        "while I != 0:\n",
+        "  I = float(input())\n",
+        "  L.append(I)\n",
+        "L"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Hjn7dUKhVsQn",
+        "outputId": "9523e302-2dfd-48be-d6a2-19410543798a"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "1\n",
+            "2\n",
+            "3\n",
+            "4\n",
+            "5\n",
+            "6\n",
+            "7\n",
+            "8\n",
+            "9\n",
+            "0\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[1.0, 2.0, 3.0, 4.0, 5.0, 6.0, 7.0, 8.0, 9.0, 0.0]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 11
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Month Dictionary"
+      ],
+      "metadata": {
+        "id": "-BdYFINGGEuf"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "months = {}\n",
+        "\n",
+        "names = ['Jan', 'Feb', 'Mar', 'Apr', 'May', 'Jun', 'Jul', 'Aug', 'Sep', 'Oct', 'Nov', 'Dec']\n",
+        "numbers = [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12]\n",
+        "\n",
+        "for x in numbers:\n",
+        "  months[x] = names[x-1]\n",
+        "months"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "HvuMv4A2FhDU",
+        "outputId": "bace32d2-ffdd-4d47-9168-284ac046b2ff"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{1: 'Jan',\n",
+              " 2: 'Feb',\n",
+              " 3: 'Mar',\n",
+              " 4: 'Apr',\n",
+              " 5: 'May',\n",
+              " 6: 'Jun',\n",
+              " 7: 'Jul',\n",
+              " 8: 'Aug',\n",
+              " 9: 'Sep',\n",
+              " 10: 'Oct',\n",
+              " 11: 'Nov',\n",
+              " 12: 'Dec'}"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 6
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "House Hunting"
+      ],
+      "metadata": {
+        "id": "ohgRrmrQWtwd"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "total_cost = float(input('House_Cost: '))\n",
+        "salary = float(input('Annual_Salary: '))\n",
+        "portion_saved = float(input('Portion_Saved: '))\n",
+        "portion_down_payment = 0.25\n",
+        "amount = 0\n",
+        "months = 0\n",
+        "r = 0.04\n",
+        "down = total_cost * portion_down_payment\n",
+        "\n",
+        "while amount < down:\n",
+        "    months += 1\n",
+        "    amount = amount + (amount * r / 12) + (salary * portion_saved / 12)\n",
+        "\n",
+        "print(months)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Con2tIMFWvZL",
+        "outputId": "f95ec1ba-ca55-4ad6-8da8-bf8d029306e7"
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "House_Cost: 100000\n",
+            "Annual_Salary: 10000\n",
+            "Portion_Saved: .20\n",
+            "122\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "House Hunting 2"
+      ],
+      "metadata": {
+        "id": "dRZNNqXtbCRi"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "total_cost = float(input('House Cost: '))\n",
+        "salary = float(input('Annual Salary: '))\n",
+        "portion_saved = float(input('Portion Saved: '))\n",
+        "semi_annual_raise = float(input('Semiannual Raise (as a decimal): '))\n",
+        "\n",
+        "portion_down_payment = 0.25\n",
+        "amount = 0\n",
+        "months = 0\n",
+        "r = 0.04\n",
+        "down = total_cost * portion_down_payment\n",
+        "\n",
+        "while amount < down:\n",
+        "    months += 1\n",
+        "    amount = amount + (amount * r / 12) + (salary * portion_saved / 12)\n",
+        "    if months % 6 == 0:\n",
+        "        salary = salary * (1 + semi_annual_raise)\n",
+        "\n",
+        "print(months)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "FhV3iAtobDnQ",
+        "outputId": "f9fd7ec6-70e5-4cd6-eef9-89fdeea7932f"
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "House Cost: 1000000\n",
+            "Annual Salary: 200000\n",
+            "Portion Saved: .20\n",
+            "Semiannual Raise (as a decimal): .10\n",
+            "49\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Number Within Range"
+      ],
+      "metadata": {
+        "id": "Yh2WpTVpbfrS"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\n",
+        "def range_check(number, start, end):\n",
+        "    return start <= number <= end\n",
+        "number = float(input('Number'))\n",
+        "Lower = float(input('Lower'))\n",
+        "Upper = float(input('Upper'))\n",
+        "print(range_check(number,Lower,Upper))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "iM0F4BqMbgB6",
+        "outputId": "34362863-5ba1-4156-9938-12df114287fc"
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Number5\n",
+            "Lower1\n",
+            "Upper10\n",
+            "True\n"
           ]
         }
       ]
