--- a/InClassAssignments.ipynb
+++ b/InClassAssignments.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNNv+DhyKD6VoHQ6abes7Mn",
+      "authorship_tag": "ABX9TyMtBwh7Z+pp4FZLKMCl7Z2C",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -392,7 +392,7 @@
         "id": "Con2tIMFWvZL",
         "outputId": "f95ec1ba-ca55-4ad6-8da8-bf8d029306e7"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -444,7 +444,7 @@
         "id": "FhV3iAtobDnQ",
         "outputId": "f9fd7ec6-70e5-4cd6-eef9-89fdeea7932f"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -484,9 +484,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "iM0F4BqMbgB6",
-        "outputId": "34362863-5ba1-4156-9938-12df114287fc"
+        "outputId": "1fa15c0e-cd8a-4621-c163-b83036c3be75"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -494,9 +494,104 @@
           "text": [
             "Number5\n",
             "Lower1\n",
-            "Upper10\n",
-            "True\n"
+            "Upper4\n",
+            "False\n"
           ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "String Reversal"
+      ],
+      "metadata": {
+        "id": "vZyKs6jjUjjZ"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "string = input()\n",
+        "def rev(s):\n",
+        "  if len(s) == 0:\n",
+        "    return s\n",
+        "  else:\n",
+        "    return rev(s[1:]) + s[0]\n",
+        "\n",
+        "\n",
+        "print(rev(string))"
+      ],
+      "metadata": {
+        "id": "JqnZVOlmUkB6",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "d829dc9a-0870-4a65-96c5-fba0c503a729"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "hello\n",
+            "olleh\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Weighted Average"
+      ],
+      "metadata": {
+        "id": "Qpx_ZNrXt0vX"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from ast import YieldFrom\n",
+        "def wAvg(L, w):\n",
+        "    try:\n",
+        "        numerator = sum(x * y for x, y in zip(L, w))\n",
+        "        denominator = sum(w)\n",
+        "        return numerator / denominator\n",
+        "\n",
+        "    except ZeroDivisionError:\n",
+        "        print(\"ZeroDivisionError:\")\n",
+        "        return []\n",
+        "\n",
+        "    except TypeError:\n",
+        "        print(\"TypeError:\")\n",
+        "        return []\n",
+        "\n",
+        "    except Error:\n",
+        "        print(f'Unknown Error: {e}')\n",
+        "        return float('nan')\n",
+        "\n",
+        "wAvg([1, 2, 3], [.3, .4, .3])"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "feMA8yWft51X",
+        "outputId": "31053453-5d35-4ca5-ec97-e48101fe3732"
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "2.0"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 9
         }
       ]
     }
