--- a/InClassAssignments.ipynb
+++ b/InClassAssignments.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMtBwh7Z+pp4FZLKMCl7Z2C",
+      "authorship_tag": "ABX9TyO4eCJaeZiWtUEZaOOd7XSO",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -581,7 +581,7 @@
         "id": "feMA8yWft51X",
         "outputId": "31053453-5d35-4ca5-ec97-e48101fe3732"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -594,6 +594,45 @@
           "execution_count": 9
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Student Class"
+      ],
+      "metadata": {
+        "id": "IutqLyNv8Zra"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "Class Student:\n",
+        "  def __init__(self, year, course):\n",
+        "    self.name = name\n",
+        "    self.year = year\n",
+        "    self.courses = []\n",
+        "\n",
+        "  def get_name(self):\n",
+        "    return self.name\n",
+        "\n",
+        "  def get_year(self):\n",
+        "    return self.year\n",
+        "\n",
+        "  def enroll(self, course):\n",
+        "    if course in self.courses:\n",
+        "      return \"Cannot add a course you are already enrolled in\"\n",
+        "    else:\n",
+        "       self.courses.append(course)\n",
+        "\n",
+        "  def get_courses(self):\n",
+        "    return self.courses"
+      ],
+      "metadata": {
+        "id": "PaMRGsmV8bfQ"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
